# Superi

./: .gitignore  LICENSE  README.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: capabilities.rs  crash_diagnostics.rs  desktop_shell.rs  engine.rs  file_associations.rs  lib.rs  lifecycle.rs  main.rs  platform_adapters.rs  process_runtime.rs  project_lifecycle.rs  transport.rs  viewport.rs  window_session.rs
app/src-tauri/src/project_lifecycle/: media_preview.rs  source_monitor.rs  source_monitoring.rs
app/src-tauri/tests/: crash_diagnostics_contract.rs  derived_media_lifecycle_contract.rs  desktop_shell_contract.rs  engine_connection_contract.rs  file_associations_contract.rs  lifecycle_contract.rs  media_annotations_contract.rs  media_batch_operations_contract.rs  media_content_search_contract.rs  media_identity_contract.rs  media_import_contract.rs  media_library_views_contract.rs  media_metadata_contract.rs  media_preview_generation_contract.rs  offline_media_contract.rs  process_runtime_contract.rs  project_lifecycle_contract.rs  project_settings_contract.rs  removable_media_contract.rs  source_monitor_contract.rs  transport_contract.rs  viewer_presentation_contract.rs
ci/tauri-smoke/src-tauri/: Cargo.toml  tauri.conf.json
ci/tauri-smoke/src-tauri/src/: lib.rs  main.rs
open/: Cargo.toml  README.md  deny.toml
open/assets/brand/: README.md  icon.icns
open/bindings/typescript/: superi-api.ts
open/bindings/typescript/editorial-contracts/: README.md  package-lock.json  package.json  tsconfig.json
open/ci/: network-isolated-contract.sh  run-network-isolated.sh
open/crates/galileo-ai/: Cargo.toml
open/crates/galileo-ai/src/: artifacts.rs  audit.rs  lib.rs  runtime.rs
open/crates/galileo-api/: Cargo.toml
open/crates/galileo-api/src/: api.rs  lib.rs
open/crates/galileo-audio/: Cargo.toml
open/crates/galileo-audio/src/: lib.rs  mixing.rs  playback.rs  resample.rs
open/crates/galileo-cache/: Cargo.toml
open/crates/galileo-cache/src/: frame.rs  lib.rs  prefetch.rs  render.rs
open/crates/galileo-cli/: Cargo.toml
open/crates/galileo-cli/src/: commands.rs  main.rs
open/crates/galileo-codecs-platform/: Cargo.toml
open/crates/galileo-codecs-platform/src/: lib.rs  media_foundation.rs  register.rs  vaapi.rs
open/crates/galileo-codecs-rs/: Cargo.toml
open/crates/galileo-codecs-rs/src/: lib.rs  mp3.rs  opus.rs  register.rs  vp9.rs
open/crates/galileo-color/: Cargo.toml
open/crates/galileo-color/src/: hdr.rs  lib.rs  transform_out.rs  view.rs
open/crates/galileo-concurrency/: Cargo.toml
open/crates/galileo-concurrency/src/: clock.rs  jobs.rs  lib.rs  shared.rs  threads.rs
open/crates/galileo-core/: Cargo.toml
open/crates/galileo-core/src/: color_space.rs  error.rs  lib.rs  time.rs
open/crates/galileo-effects/: Cargo.toml
open/crates/galileo-effects/src/: keyframe.rs  lib.rs  text.rs
open/crates/galileo-engine/: Cargo.toml
open/crates/galileo-engine/src/: command.rs  export_queue.rs  lib.rs  lifecycle.rs  nodes.rs  validation.rs
open/crates/galileo-gpu/: Cargo.toml
open/crates/galileo-gpu/src/: device.rs  lib.rs  upload.rs
open/crates/galileo-graph/: Cargo.toml
open/crates/galileo-graph/src/: expr.rs  lib.rs  node.rs
open/crates/galileo-image/: Cargo.toml
open/crates/galileo-image/src/: channels.rs  lib.rs
open/crates/galileo-media-io/: Cargo.toml
open/crates/galileo-media-io/src/: decode.rs  image_seq.rs  lib.rs
open/crates/galileo-project/: Cargo.toml
open/crates/galileo-project/src/: document.rs  lib.rs  persist.rs  recovery.rs
open/crates/galileo-timeline/: Cargo.toml
open/crates/galileo-timeline/src/: lib.rs
open/crates/superi-ai/: Cargo.toml
open/crates/superi-ai/src/: capabilities.rs  lib.rs  pipelines.rs
open/crates/superi-ai/tests/: capabilities_contract.rs
open/crates/superi-api/: Cargo.toml
open/crates/superi-api/src/: api.rs  audio_automation.rs  commands.rs  editor.rs  event_stream.rs  events.rs  extensions.rs  jobs.rs  lib.rs  local.rs  negotiation.rs  permissions.rs  playback.rs  project.rs  recovery.rs  scenario.rs  schema.rs  scripting.rs  state.rs  typescript.rs  validation.rs  version.rs
open/crates/superi-api/tests/: async_jobs_contract.rs  audio_automation_contract.rs  dispatcher_contract.rs  editor_contract.rs  editor_state_contract.rs  engine_introspection_contract.rs  event_stream_contract.rs  extension_registry_contract.rs  integration_validation_contract.rs  local_project_host_contract.rs  media_capabilities_contract.rs  permissions_contract.rs  playback_transport_contract.rs  project_recovery_contract.rs  project_settings_contract.rs  public_schema_contract.rs  scenario_contract.rs  scripting_contract.rs  typescript_bindings_contract.rs  version_negotiation_contract.rs
open/crates/superi-audio/: Cargo.toml
open/crates/superi-cache/: Cargo.toml
open/crates/superi-cli/: Cargo.toml
open/crates/superi-codecs-platform/: Cargo.toml  build.rs
open/crates/superi-codecs-rs/: Cargo.toml  build.rs
open/crates/superi-codecs-vendor/: Cargo.toml
open/crates/superi-color/: Cargo.toml
open/crates/superi-concurrency/: Cargo.toml
open/crates/superi-core/: Cargo.toml
open/crates/superi-desktop/: Cargo.toml
open/crates/superi-effects/: Cargo.toml
open/crates/superi-engine/: Cargo.toml
open/crates/superi-gpu/: Cargo.toml
open/crates/superi-graph/: Cargo.toml
open/crates/superi-image/: Cargo.toml
open/crates/superi-media-io/: Cargo.toml
open/crates/superi-project/: Cargo.toml
open/crates/superi-session/: Cargo.toml
open/crates/superi-timeline/: Cargo.toml
open/crates/superi-ui/: Cargo.toml
open/docs/: STRUCTURE.md
open/test-fixtures/: README.md
open/tools/superi-api-bindings/: Cargo.toml
open/tools/superi-bench/: Cargo.toml
open/tools/superi-boundary-tool/: Cargo.toml
open/tools/superi-dependency-check/: Cargo.toml
open/tools/superi-fixture-tool/: Cargo.toml
open/tools/superi-test-report/: Cargo.toml  README.md
open/tools/superi-ui-inspect/: Cargo.toml
(+908 files in other folders)
