[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thebriangao/Superi"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

# Canonical pinned versions for shared external crates. Declared centrally so a
# crate opts in with `dep = { workspace = true }`. NONE are referenced in the
# skeleton, so cargo does not fetch them. Versions are starting points: adjust
# when a crate first actually uses one.
[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
bytemuck = "1"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
wgpu = "23"
sha2 = "=0.10.9"
oxideav-core = "=0.1.29"
oxideav-mp3 = { git = "https://github.com/OxideAV/oxideav-mp3.git", rev = "f37901b5d9c691b113e96a3bb95645c67af1a046" }
claxon = "=0.4.3"
flacenc = { version = "=0.4.0", default-features = false }
built = "=0.7.1"
