[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thebriangao/Superi"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"

# Canonical pinned versions for shared external crates. Declared centrally so a
# crate opts in with `dep = { workspace = true }`. NONE are referenced in the
# skeleton, so cargo does not fetch them. Versions are starting points: adjust
# when a crate first actually uses one.
[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
crossbeam-queue = "=0.3.13"
bytemuck = "1"
half = { version = "=2.4.1", default-features = false }
exr = { version = "=1.73.0", default-features = false }
image = { version = "=0.25.6", default-features = false, features = ["bmp", "jpeg", "png", "tga", "tiff", "webp"] }
# Constrain image's WebP backend to the last 0.2 release compatible with Rust 1.80.0.
image-webp = "=0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pollster = "0.4"
wgpu = "23"
raw-window-handle = "=0.6.2"
winit = { version = "=0.30.13", default-features = false }
sha2 = "=0.10.9"
oxideav-core = "=0.1.29"
oxideav-mp3 = { git = "https://github.com/OxideAV/oxideav-mp3.git", rev = "f37901b5d9c691b113e96a3bb95645c67af1a046" }
claxon = "=0.4.3"
flacenc = { version = "=0.4.0", default-features = false }
built = "=0.7.1"
lewton = { version = "=0.10.2", default-features = false }
ogg = "=0.8.0"
ogg_next_sys = "=0.1.3"
vorbis_rs = { version = "=0.5.4", default-features = false }
aotuv_lancer_vorbis_sys = "=0.1.4"
libopus_sys = { version = "=0.3.3", features = ["bundled", "static"] }
libloading = "=0.8.9"
cc = "=1.2.67"
windows = "=0.61.3"
libc = "=0.2.186"
rav1d = { version = "=1.0.0", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
rav1e = { version = "=0.7.1", default-features = false }
av1-grain = "=0.2.4"
jobserver = "=0.1.34"
objc2-audio-toolbox = { version = "=0.3.2", default-features = false }
objc2-core-audio-types = { version = "=0.3.2", default-features = false }
objc2-core-foundation = { version = "=0.3.2", default-features = false }
objc2-core-media = { version = "=0.3.2", default-features = false }
objc2-core-video = { version = "=0.3.2", default-features = false }
objc2-video-toolbox = { version = "=0.3.2", default-features = false }
objc2-core-graphics = { version = "=0.3.2", default-features = false }
