[package]
name = "superi-desktop"
version = "0.0.0"
description = "Superi desktop editor"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "superi_desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "superi-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
pollster = "=0.4.0"
superi-api = { path = "../../open/crates/superi-api" }
superi-color = { path = "../../open/crates/superi-color" }
superi-concurrency = { path = "../../open/crates/superi-concurrency" }
superi-core = { path = "../../open/crates/superi-core" }
superi-engine = { path = "../../open/crates/superi-engine" }
superi-gpu = { path = "../../open/crates/superi-gpu" }
superi-image = { path = "../../open/crates/superi-image" }
tauri = { version = "=2.11.5", default-features = false, features = ["test", "unstable", "wry"] }
