[package]
name = "superi-tauri-smoke"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "superi_tauri_smoke"
path = "src/lib.rs"

[[bin]]
name = "superi-tauri-smoke"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", default-features = false, features = ["test", "wry"] }
