[package]
name = "galileo-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
os-codecs = ["galileo-engine/os-codecs"]

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-engine = { path = "../galileo-engine" }
