[package]
name = "galileo-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-concurrency = { path = "../galileo-concurrency" }
