[package]
name = "galileo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
os-codecs = ["galileo-api/os-codecs"]

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-api = { path = "../galileo-api" }
