[package]
name = "galileo-codecs-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-image = { path = "../galileo-image" }
galileo-media-io = { path = "../galileo-media-io" }
