[package]
name = "galileo-concurrency"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-gpu = { path = "../galileo-gpu" }
