[package]
name = "galileo-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
galileo-core = { path = "../galileo-core" }
galileo-graph = { path = "../galileo-graph" }
galileo-timeline = { path = "../galileo-timeline" }
