[package]
name = "superi-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
os-codecs = ["superi-engine/os-codecs"]

[dependencies]
serde = { workspace = true }
superi-core = { path = "../superi-core" }
superi-engine = { path = "../superi-engine" }

[dev-dependencies]
serde_json = { workspace = true }
sha2 = { workspace = true }
superi-media-io = { path = "../superi-media-io" }
superi-concurrency = { path = "../superi-concurrency" }
