[package]
name = "superi-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
os-codecs = ["superi-engine/os-codecs"]
typescript-bindings = ["dep:specta"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sha2 = { workspace = true }
specta = { workspace = true, optional = true }
superi-core = { path = "../superi-core" }
superi-engine = { path = "../superi-engine", features = ["test-support"] }

[dev-dependencies]
superi-media-io = { path = "../superi-media-io" }
superi-concurrency = { path = "../superi-concurrency" }
