[package]
name = "superi-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cpal = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
superi-core = { path = "../superi-core" }
superi-concurrency = { path = "../superi-concurrency" }
