[package]
name = "superi-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cpal = { workspace = true }
libloading = { workspace = true }
ringbuf = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
superi-core = { path = "../superi-core" }
superi-concurrency = { path = "../superi-concurrency" }
vst3 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
objc2-audio-toolbox = { workspace = true, features = ["AUComponent", "AudioComponent", "AudioUnit", "AudioUnitProperties", "block2"] }
objc2-core-audio-types = { workspace = true, features = ["CoreAudioBaseTypes"] }
objc2-core-foundation = { workspace = true, features = ["std", "CFBundle", "CFString", "CFURL"] }
