[package]
name = "superi-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
superi-concurrency = { path = "../superi-concurrency" }
superi-core = { path = "../superi-core" }
superi-gpu = { path = "../superi-gpu" }
superi-image = { path = "../superi-image" }
superi-graph = { path = "../superi-graph" }
sha2.workspace = true
