[package]
name = "superi-codecs-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
superi-media-io = { path = "../superi-media-io" }
