[package]
name = "superi-codecs-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
superi-media-io = { path = "../superi-media-io" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-audio-toolbox = { workspace = true, features = ["std", "AudioConverter", "objc2-core-audio-types"] }
objc2-core-audio-types = { workspace = true, features = ["std", "CoreAudioBaseTypes"] }
objc2-core-foundation = { workspace = true, features = ["std", "CFBase", "CFData", "CFDictionary", "CFNumber", "CFString"] }
objc2-core-media = { workspace = true, features = ["std", "CMBase", "CMBlockBuffer", "CMFormatDescription", "CMSampleBuffer", "CMTime", "objc2-core-video"] }
objc2-core-video = { workspace = true, features = ["std", "CVBase", "CVBuffer", "CVImageBuffer", "CVPixelBuffer", "CVReturn"] }
objc2-video-toolbox = { workspace = true, features = ["std", "VTBase", "VTCompressionSession", "VTDecompressionSession", "VTErrors", "objc2-core-media", "objc2-core-video"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
