[package]
name = "superi-codecs-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
oxideav-core = { workspace = true }
oxideav-mp3 = { workspace = true }
claxon = { workspace = true }
flacenc = { workspace = true }
aotuv_lancer_vorbis_sys = { workspace = true }
lewton = { workspace = true }
libopus_sys = { workspace = true }
libloading = { workspace = true }
ogg = { workspace = true }
ogg_next_sys = { workspace = true }
libc = { workspace = true }
rav1d = { workspace = true }
rav1e = { workspace = true }
# rav1e 0.7 accepts av1-grain 0.2 semver-wide, but 0.2.5 requires Rust 1.80.1.
av1-grain = { workspace = true }
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
superi-media-io = { path = "../superi-media-io" }
vorbis_rs = { workspace = true }

# flacenc 0.4 accepts built 0.7 semver-wide, but built newer than 0.7.1
# generates constants that do not compile on the workspace Rust 1.80 floor.
[build-dependencies]
built = { workspace = true }
cc = { workspace = true }
# The AV1 build graph accepts jobserver 0.1 semver-wide, but 0.1.35 requires Rust 1.85.
jobserver = { workspace = true }
