[package]
name = "superi-codecs-vendor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
superi-media-io = { path = "../superi-media-io" }
