[package]
name = "superi-concurrency"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
crossbeam-queue = { workspace = true }
superi-core = { path = "../superi-core" }
superi-gpu = { path = "../superi-gpu" }

[dev-dependencies]
pollster = { workspace = true }
superi-media-io = { path = "../superi-media-io" }
