[package]
name = "superi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
pollster = { workspace = true }
superi-gpu = { path = "../superi-gpu" }
superi-session = { path = "../superi-session" }
superi-ui = { path = "../superi-ui" }
tempfile = { workspace = true }
winit = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
winit = { workspace = true, features = ["rwh_06"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["rwh_06", "x11"] }
