[package]
name = "superi-effects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
superi-core = { path = "../superi-core" }
superi-gpu = { path = "../superi-gpu" }
superi-image = { path = "../superi-image" }
superi-graph = { path = "../superi-graph" }

[dev-dependencies]
serde_json.workspace = true
