[package]
name = "superi-effects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
half = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
skrifa.workspace = true
superi-core = { path = "../superi-core" }
superi-gpu = { path = "../superi-gpu" }
superi-image = { path = "../superi-image" }
superi-graph = { path = "../superi-graph" }
swash.workspace = true
unicode-bidi.workspace = true
unicode-linebreak.workspace = true

[dev-dependencies]
font-test-data.workspace = true
