[package]
name = "superi-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
raw-window-handle = { workspace = true }
sha2 = { workspace = true }
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
wgpu = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dev-dependencies]
winit = { workspace = true, features = ["rwh_06"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
winit = { workspace = true, features = ["rwh_06", "x11"] }
