[package]
name = "superi-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
superi-core = { path = "../superi-core" }
superi-gpu = { path = "../superi-gpu" }
superi-image = { path = "../superi-image" }
superi-concurrency = { path = "../superi-concurrency" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
