[package]
name = "superi-image"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
exr = { workspace = true }
half = { workspace = true }
image = { workspace = true }
image-webp = { workspace = true }
superi-core = { path = "../superi-core" }
