[package]
name = "superi-media-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }
superi-core = { path = "../superi-core" }
superi-image = { path = "../superi-image" }
