[package]
name = "superi-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
sha2.workspace = true
superi-core = { path = "../superi-core" }
superi-graph = { path = "../superi-graph" }
superi-timeline = { path = "../superi-timeline" }

[dev-dependencies]
serde_json.workspace = true
