[package]
name = "superi-project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
superi-audio = { path = "../superi-audio" }
superi-core = { path = "../superi-core" }
superi-graph = { path = "../superi-graph" }
superi-timeline = { path = "../superi-timeline" }
