[package]
name = "superi-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
superi-ai = { path = "../superi-ai" }
superi-api = { path = "../superi-api" }
superi-audio = { path = "../superi-audio" }
superi-codecs-rs = { path = "../superi-codecs-rs" }
superi-color = { path = "../superi-color" }
superi-concurrency = { path = "../superi-concurrency" }
superi-core = { path = "../superi-core" }
superi-engine = { path = "../superi-engine" }
superi-gpu = { path = "../superi-gpu" }
superi-image = { path = "../superi-image" }
superi-media-io = { path = "../superi-media-io" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
